--- a/showtimeDuranjo/templates/homepage/radio.html
+++ b/showtimeDuranjo/templates/homepage/radio.html
@@ -40,7 +40,7 @@ Show Time - Radio
 <!--  GRAMA -->
 	<section id="transmision" class="transmision">
 		<div class="wrapper">
-			<p>En vivo de Lunes a Viernes de 12:00 pm a 1:00 pm por Explosiva 92.3 FM.</p>
+			<p>Muy Pronto</p>
 			<div class="reproducto">
 				<iframe width="850" height="500" src="http://www.ustream.tv/embed/4706359?v=3&amp;wmode=direct" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe>
 			</div>
