--- a/showtimeDuranjo/static/css/screen.css
+++ b/showtimeDuranjo/static/css/screen.css
@@ -9,7 +9,7 @@ a img{border:none}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}
 .zinnia{line-height:1.5;background:transparent url('../img/background.gif?1317027277') repeat-x scroll left top}
 .zinnia h1,.zinnia h4,.zinnia h5,.zinnia h6{font-weight:normal;color:#39d;color: #C4C4C4;}
-.zinnia h3{font-weight:normal;color: #CDCDCF;}
+.zinnia h3{font-weight:normal;color: #525258;}
 .zinnia h1 img,.zinnia h2 img,.zinnia h3 img,.zinnia h4 img,.zinnia h5 img,.zinnia h6 img{margin:0}
 .zinnia h1{font-size:3em;line-height:1;margin-bottom:0.50em}
 .zinnia h3{font-size:1.5em;line-height:1;margin-bottom:1.00em}
@@ -21,7 +21,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,su
 .left{display:inline;float:left;margin:1.5em 1.5em 1.5em 0;padding:0}
 .zinnia p 
 .right{display:inline;float:right;margin:1.5em 0 1.5em 1.5em;padding:0}
-.zinnia a{color: #C082B9;}
+.zinnia a{color: #85387C;}
 .zinnia a:focus{color:#11a0ff}
 .zinnia a:hover{color: #645B41;}.zinnia a:active{color:#9000dd}
 .zinnia blockquote{margin:1.5em;color:#666;font-style:italic}
@@ -63,13 +63,17 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,su
 .zinnia .container:after{content:"";display:table;clear:both}
 .zinnia #header,.zinnia #footer{clear:both;margin-left:1.176%;margin-right:1.176%}
 .zinnia #content{
-	background-color: rgb(255, 255, 255);padding: 30px;opacity: 0.7;display: inline;float: left;width: 64.706%;
+	background-color: rgba(255, 255, 255, 0.8);
+	padding: 30px;display: inline;float: left;width: 64.706%;
 	margin-right: 1.176%;margin-left: 1.176%;-moz-box-shadow: 9px 11px 25px #000000;-webkit-box-shadow: 9px 11px 25px #000000;
 	box-shadow: 9px 11px 25px #000000;margin-bottom: 30px;
 	-webkit-border-radius: 18px;
 	-moz-border-radius: 18px;
 	border-radius: 18px;
 	color: #000;
+}
+#sidebar h3{
+	color: #fff !important;
 }
 .zinnia #sidebar{color: white;display:inline;float:left;width: 25.7%;;margin-right:1.176%;display:inline;float:right;margin-right:1.176%;#margin-left:-1em}
 @media (max-width: 650px){.zinnia #content,.zinnia #sidebar{clear:both;margin-left:1.176%;margin-right:1.176%;display:inline;float:left;width:97.647%;margin-right:1.176%}}
@@ -232,7 +236,10 @@ color: white;}
 	z-index: 1;
 	background: url(../img/estrellas.png) no-repeat;
 }
-
+.face{
+	width: 560px;
+	margin: 0 auto;
+}
 /*@media screen and (max-width: 1000px){
 #content{
 	width: 70% !important;
